--- a/popup.html
+++ b/popup.html
@@ -1,40 +1,65 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <style>
       body {
-        width: 300px;
-        padding: 10px;
-        font-family: Arial, sans-serif;
+        width: 320px;
+        padding: 25px;
+        font-family: 'Nunito', sans-serif;
+        background: linear-gradient(135deg, #fdfbfb 0%, #ebedee 100%);
+        color: #333;
+      }
+      h1 {
+        font-size: 20px;
+        color: #5D6470;
+        margin-bottom: 20px;
+        text-align: center;
       }
       textarea {
         width: 100%;
-        height: 100px;
-        margin-bottom: 10px;
-        padding: 5px;
-        font-size: 14px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
+        height: 120px;
+        margin-bottom: 20px;
+        padding: 12px;
+        font-size: 15px;
+        border: 1px solid #e2e2e2;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         resize: vertical;
+        transition: border-color 0.3s;
+      }
+      textarea:hover {
+        border-color: #a4a4a4;
       }
       button {
         width: 100%;
-        padding: 10px;
-        font-size: 16px;
+        padding: 15px;
+        font-size: 17px;
         color: white;
-        background-color: #007bff;
+        background: linear-gradient(45deg, #6a85b6, #bac8e0);
         border: none;
-        border-radius: 4px;
+        border-radius: 8px;
         cursor: pointer;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+        transition: background-color 0.3s, box-shadow 0.3s;
       }
       button:hover {
-        background-color: #0056b3;
+        background: linear-gradient(45deg, #5a75a6, #aab8d0);
+        box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+      }
+      footer {
+        text-align: center;
+        margin-top: 20px;
+        font-size: 12px;
+        color: #888;
       }
     </style>
   </head>
   <body>
+    <h1>Extension Prompt</h1>
     <textarea id="userPrompt" placeholder="Enter your prompt"></textarea>
     <button id="sendPrompt">Send Prompt</button>
+    <footer>© 2023 Your Company Name</footer>
     <script src="popup.js"></script>
   </body>
 </html>
