--- a/popup.html
+++ b/popup.html
@@ -53,6 +53,21 @@
         font-size: 12px;
         color: #888;
       }
+
+      .loader {
+        border: 3px solid #f3f3f3; /* Light grey background */
+        border-top: 3px solid #3498db; /* Blue color */
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        animation: spin 2s linear infinite;
+      }
+
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+
     </style>
   </head>
   <body>
@@ -61,5 +76,6 @@
     <button id="sendPrompt">Send Prompt</button>
     <footer>© 2023 Your Company Name</footer>
     <script src="popup.js"></script>
+    <div id="loader" class="loader" style="display: none;"></div>
   </body>
 </html>
