update footer text

--- a/popup.html
+++ b/popup.html
@@ -57,9 +57,9 @@
   </head>
   <body>
     <h1>Extension Prompt</h1>
-    <textarea id="userPrompt" placeholder="Enter your prompt"></textarea>
-    <button id="sendPrompt">Send Prompt</button>
-    <footer>© 2023 Your Company Name</footer>
+    <textarea id="userPrompt" placeholder="How do you want the web to be modified?"></textarea>
+    <button id="sendPrompt">Send Instruction</button>
+    <footer>2023 Generative Web</footer>
     <script src="popup.js"></script>
   </body>
 </html>
